<resources>
    <string name="app_name">App11_Login</string>
    <string name="nome_de_usuario">Nome de usuário</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="lembrar_informa_es_de_login">Lembrar informações de Login</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="salvar_usuario">Salvar Usuário</string>
</resources>