<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="16dp"
    tools:context=".View.UserAddActivity">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_newUsername"
        android:layout_marginTop="64dp"
        android:background="@color/white"
        android:hint="@string/nome_de_usuario"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_newPassword"
        android:layout_marginTop="64dp"
        android:background="@color/white"
        android:hint="@string/senha"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/editText_newUsername"
        app:layout_constraintEnd_toEndOf="@id/editText_newUsername"
        app:layout_constraintTop_toTopOf="@id/editText_newUsername"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_newConfirmPassword"
        android:layout_marginTop="64dp"
        android:background="@color/white"
        android:hint="@string/confirmar_senha"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/editText_newUsername"
        app:layout_constraintEnd_toEndOf="@id/editText_newUsername"
        app:layout_constraintTop_toTopOf="@id/editText_newPassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_save_user"
        android:layout_marginBottom="64dp"
        android:text="@string/salvar_usuario"
        app:layout_constraintStart_toStartOf="@id/editText_newUsername"
        app:layout_constraintEnd_toEndOf="@id/editText_newUsername"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>